sort.baseball.BubbleBaseball.scala.error
Compilation error:
BubbleBaseball:49: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (pos <-0 to nbPos-1){
  ^BubbleBaseball:55: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return retour
  ^BubbleBaseball:64: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (pos <- 0 to nbPos-1){
  ^BubbleBaseball:70: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return retour
  ^